<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEventSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="54dp"
            app:titleTextColor="@color/colorAccent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsEventSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorGravity="stretch"
            app:tabMode="fixed"
            app:tabRippleColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/colorElements">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEventSettingsSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_event_settings_sttings" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEventSettingsParticipantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_event_settings_participants" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEventSettingsSolicitudes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_event_settings_requests" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TableRow
        android:id="@+id/rowEventSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/views_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/buttonEventSettingsDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton1"
            android:text="@string/button_delete_event"
            android:textAllCaps="true"
            android:layout_weight="0.5"
            android:textColor="@color/colorElements"
            android:layout_marginRight="@dimen/views_horizontal_margin"/>

        <Button
            android:id="@+id/buttonEventSettingsFinalize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton1"
            android:text="@string/button_finalize_event"
            android:textAllCaps="true"
            android:layout_weight="0.5"
            android:textColor="@color/colorElements"
            android:layout_marginLeft="@dimen/views_horizontal_margin"/>
    </TableRow>

    <Button
        android:id="@+id/buttonEventSettingsSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton1"
        android:text="@string/button_save"
        android:textAllCaps="true"
        android:textColor="@color/colorElements"
        android:layout_marginTop="@dimen/views_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/buttonEventSettingsSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton1"
        android:text="@string/button_subscribe"
        android:textAllCaps="true"
        android:textColor="@color/colorElements"
        android:layout_marginTop="@dimen/views_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/buttonEventSettingsUnSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton1"
        android:text="@string/button_delete_request"
        android:textAllCaps="true"
        android:textColor="@color/colorElements"
        android:layout_marginTop="@dimen/views_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"/>

    <FrameLayout
        android:id="@+id/containerEventSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>