<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="54dp"
            app:title="@string/nav_search_event"
            app:titleTextColor="@color/colorAccent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsSearchEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorGravity="stretch"
            app:tabMode="fixed"
            app:tabRippleColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/colorElements">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSearchEventsFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_search_events_filters" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSearchEventsResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_search_events_results" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TableRow
        android:id="@+id/rowSearchButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/views_vertical_margin">

        <Button
            android:id="@+id/buttonFilterClean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton1"
            android:text="@string/button_filter_clean"
            android:textAllCaps="true"
            android:layout_weight="0.5"
            android:textColor="@color/colorElements"
            android:layout_marginRight="@dimen/views_horizontal_margin"/>

        <Button
            android:id="@+id/buttonFilterSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton1"
            android:text="@string/button_filter_search"
            android:textAllCaps="true"
            android:layout_weight="0.5"
            android:textColor="@color/colorElements"
            android:layout_marginLeft="@dimen/views_horizontal_margin"/>
    </TableRow>

    <FrameLayout
        android:id="@+id/contenedorSearchEvent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".fragments.searchevent.SearchEvent" />
</LinearLayout>