<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorGravity="stretch"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/colorElements">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_description" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabEspecificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_specify" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabRequisitos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_requirements" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabInvitar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_invite" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/colorPrimary"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout
            android:id="@+id/homeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            tools:context=".fragments.newevent.NewEvent" />
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>