<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.newevent.NewEventDescription" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorElements"
                android:text="@string/description_description" />

            <EditText
                android:id="@+id/editSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorElements"
                android:backgroundTint="@color/colorElements"
                android:textColorHint="@color/colorElementsDark"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/description_sport"
                android:selectAllOnFocus="true"/>

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorElements"
                android:backgroundTint="@color/colorElements"
                android:textColorHint="@color/colorElementsDark"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/description_loction"
                android:selectAllOnFocus="true"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>