<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".EventRate">

    <Button
        android:id="@+id/buttonEventRateSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/views_vertical_margin"
        android:background="@drawable/boton1"
        android:text="@string/button_send_rate"
        android:textAllCaps="true"
        android:textColor="@color/colorElements" />

    <TextView
        android:id="@+id/textRateOrganizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_organization"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/colorElements"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <RatingBar
        android:id="@+id/ratingRateOrganizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:theme="@style/checkBoxCustom" />

    <View
        android:id="@+id/dividerEventRate"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorElements"/>

    <TextView
        android:id="@+id/textRateParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_participants"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/colorElements"
        android:layout_marginVertical="@dimen/views_vertical_margin"/>

    <ListView
        android:id="@+id/listRateParticipants"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>